--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 async-channel = "2.5.0"
+bytes = "1.10.1"
 chrono = "0.4.42"
 confy = "1.0.0"
 data-encoding = "2.9.0"
@@ -16,13 +17,16 @@ hex = "0.4.3"
 humansize = "2.1.3"
 iroh = "0.91.2"
 iroh-blobs = "0.93.0"
-iroh-docs = "0.92.0"
+iroh-docs = "0.91.0"
+iroh-gossip = "0.91.0"
 n0-future = "0.2.0"
+n0-watcher = "0.3.0"
 num_cpus = "1.17.0"
 rand = "0.8.5"
 rfd = "0.15.4"
 serde = "1.0.219"
 serde_derive = "1.0.219"
+serde_json = "1.0.145"
 time = "0.3.41"
 tokio = { version = "1.47.1", features = [
     "macros",
