--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ iroh-gossip = "0.91.0"
 n0-future = "0.2.0"
 n0-watcher = "0.3.0"
 num_cpus = "1.17.0"
+pulldown-cmark = "0.13.0"
 rand = "0.8.5"
 rfd = "0.15.4"
 serde = "1.0.219"
