--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+# iroh packages
+iroh = "0.92.0"
+iroh-blobs = "0.94.0"
+iroh-docs = "0.92.0"
+iroh-gossip = "0.92.0"
+n0-future = "0.2.0"
+n0-watcher = "0.3.0"
+
+# other
 anyhow = "1.0.99"
 async-channel = "2.5.0"
 bytes = "1.10.1"
@@ -15,16 +24,9 @@ eframe = "0.32.1"
 futures-buffered = "0.2.12"
 hex = "0.4.3"
 humansize = "2.1.3"
-iroh = "0.92.0"
-iroh-blobs = "0.94.0"
-iroh-docs = "0.92.0"
-iroh-gossip = "0.92.0"
-n0-future = "0.2.0"
-n0-watcher = "0.3.0"
 num_cpus = "1.17.0"
 pulldown-cmark = "0.13.0"
 rand = "0.8.5"
-rfd = "0.15.4"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_json = "1.0.145"
@@ -40,3 +42,4 @@ tokio = { version = "1.47.1", features = [
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 walkdir = "2.5.0"
+rfd = "0.15.4"
